force-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <description>Tracks income generated from crop sales or other farm activities.</description>
    <label>Income</label>
    <nameField>
        <displayFormat>INC-{00000}</displayFormat>
        <label>Income Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>