force-app/main/default/objects/Income__c/fields/Buyer_Customer__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer/Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>BuyerIncomes</relationshipName>
    <type>Lookup</type>
</CustomField>