force-app/main/default/objects/Income__c/fields/Crop_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Crop_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The crop cycle this income is associated with.</description>
    <label>Crop Cycle</label>
    <referenceTo>Crop_Cycle__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>