force-app/main/default/objects/Income__c/fields/Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Unit__c</fullName>
    <label>Price per Unit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>