force-app/main/default/objects/Income__c/fields/Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sold__c</fullName>
    <label>Quantity Sold</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>