force-app/main/default/objects/Income__c/fields/Sale_Source__c.field-meta.xml
<CustomField>
    <fullName>Sale_Source__c</fullName>
    <description>The source or channel through which the sale was made.</description>
    <label>Sale Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>