force-app/main/default/objects/Income__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
            <value>
                <fullName>Tonnes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>