force-app/main/default/objects/Income__c/validationRules/Positive_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount must be greater than zero.</errorMessage>
</ValidationRule>